config/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-hog-ns
  labels:
    name: memory-hog-ns
