config/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-hog-app-3-9
  namespace: memory-hog-ns
  labels:
    app: memory-hog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-hog
      version: "3.9"
  template:
    metadata:
      labels:
        app: memory-hog
        version: "3.9"
    spec:
      serviceAccountName: memory-hog-sa
      containers:
      - name: memory-hog-container
        image: ghcr.io/varma1316/devops_sre_solution:3.9-f162556437e676565a7e2756b4d706b7754f31ca
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-hog-app-3-10
  namespace: memory-hog-ns
  labels:
    app: memory-hog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-hog
      version: "3.10"
  template:
    metadata:
      labels:
        app: memory-hog
        version: "3.10"
    spec:
      serviceAccountName: memory-hog-sa
      containers:
      - name: memory-hog-container
        image: ghcr.io/varma1316/devops_sre_solution:3.10-f162556437e676565a7e2756b4d706b7754f31ca
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-hog-app-3-11
  namespace: memory-hog-ns
  labels:
    app: memory-hog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-hog
      version: "3.11"
  template:
    metadata:
      labels:
        app: memory-hog
        version: "3.11"
    spec:
      serviceAccountName: memory-hog-sa
      containers:
      - name: memory-hog-container
        image: ghcr.io/varma1316/devops_sre_solution:3.11-635ee2ec68e7012ad103530276e03047e57e6bd3
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
